--- a/src/sass/base/__normalize.scss
+++ b/src/sass/base/__normalize.scss
@@ -7,8 +7,9 @@
 
 html {
   font-family: sans-serif; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
+
   -webkit-text-size-adjust: 100%; /* 2 */
+      -ms-text-size-adjust: 100%; /* 2 */
 }
 
 /**
@@ -30,16 +31,19 @@ body {
 
 article,
 aside,
-details, /* 1 */
+details,
+/* 1 */
 figcaption,
 figure,
 footer,
 header,
-main, /* 2 */
+main,
+/* 2 */
 menu,
 nav,
 section,
-summary { /* 1 */
+summary {
+  /* 1 */
   display: block;
 }
 
@@ -76,7 +80,8 @@ progress {
  * 1. Add the correct display in IE.
  */
 
-template, /* 1 */
+template,
+/* 1 */
 [hidden] {
   display: none;
 }
@@ -148,8 +153,8 @@ dfn {
  */
 
 h1 {
-  font-size: 2em;
   margin: 0.67em 0;
+  font-size: 2em;
 }
 
 /**
@@ -157,8 +162,8 @@ h1 {
  */
 
 mark {
-  background-color: #ff0;
-  color: #000;
+  background-color: #ffff00;
+  color: #000000;
 }
 
 /**
@@ -176,10 +181,10 @@ small {
 
 sub,
 sup {
-  font-size: 75%;
-  line-height: 0;
   position: relative;
   vertical-align: baseline;
+  font-size: 75%;
+  line-height: 0;
 }
 
 sub {
@@ -239,9 +244,9 @@ figure {
  */
 
 hr {
+  overflow: visible; /* 2 */
   box-sizing: content-box; /* 1 */
   height: 0; /* 1 */
-  overflow: visible; /* 2 */
 }
 
 /* Forms
@@ -273,8 +278,10 @@ optgroup {
  */
 
 button,
-input, /* 1 */
-select { /* 2 */
+input,
+/* 1 */
+select {
+  /* 2 */
   overflow: visible;
 }
 
@@ -286,7 +293,8 @@ select { /* 2 */
 button,
 input,
 select,
-textarea { /* 1 */
+textarea {
+  /* 1 */
   margin: 0;
 }
 
@@ -296,7 +304,8 @@ textarea { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
 }
 
@@ -326,7 +335,8 @@ button,
  */
 
 button,
-html [type="button"], /* 1 */
+html [type="button"],
+/* 1 */
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button; /* 2 */
@@ -338,8 +348,8 @@ html [type="button"], /* 1 */
 
 button::-moz-focus-inner,
 input::-moz-focus-inner {
-  border: 0;
   padding: 0;
+  border: 0;
 }
 
 /**
@@ -356,9 +366,9 @@ input:-moz-focusring {
  */
 
 fieldset {
-  border: 1px solid #c0c0c0;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
+  border: 1px solid #c0c0c0;
 }
 
 /**
@@ -369,11 +379,11 @@ fieldset {
  */
 
 legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
   display: table; /* 1 */
+  box-sizing: border-box; /* 1 */
   max-width: 100%; /* 1 */
   padding: 0; /* 3 */
+  color: inherit; /* 2 */
   white-space: normal; /* 1 */
 }
 
