--- a/src/sass/base/forms.scss
+++ b/src/sass/base/forms.scss
@@ -1,7 +1,7 @@
 input[type='text'],
 textarea,
 select,
-input[type='password']{ /* поля */
+input[type='password'] { 
   box-sizing: border-box;
   outline: none;
   width: 100%;
@@ -9,41 +9,42 @@ input[type='password']{ /* поля */
   line-height: 20px;
   font-family: $base-font;
 
-  &:focus{
+  &:focus {
 
   }
 }
 
-label{
+label {
   cursor: pointer;
 }
 
-button{
+button {
   cursor: pointer;
   outline: none;
 }
 
-input::-webkit-input-placeholder{
+input::-webkit-input-placeholder {
 
 }
-input::-moz-placeholde{
+
+input::-moz-placeholde {
 
 }
 
 input[type="checkbox"],
-input[type="radio"]{
+input[type="radio"] {
   display: none;
   margin: 20px;
 }
 
 input[type="checkbox"] + label
-input[type="radio"] + label{
+input[type="radio"] + label {
   display: inline-block;
   vertical-align: middle;
 }
 
 input[type="checkbox"] + label::before
-input[type="radio"] + label::before{
+input[type="radio"] + label::before {
   content: "";
   display: inline-block;
   height: 49px;
@@ -51,11 +52,11 @@ input[type="radio"] + label::before{
   margin: 0 10px 0 0;
 }
 
-input[type="checkbox"] + label::before{
+input[type="checkbox"] + label::before {
   background: url("../img/") no-repeat;
 }
 
-input[type="radio"] + label::before{
+input[type="radio"] + label::before {
   background: url("../img/") no-repeat;
 }
 
