Пачка ошибок, допущенных при настройке проекта

--- a/src/sass/base/forms.scss
+++ b/src/sass/base/forms.scss
@@ -1,13 +1,13 @@
 input[type='text'],
 textarea,
 select,
-input[type='password'] { 
+input[type='password'] {
   box-sizing: border-box;
   outline: none;
   width: 100%;
   font-size: 18px;
   line-height: 20px;
-  font-family: $base-font;
+  font-family: $open-sans;
 
   &:focus {
 
