--- a/src/sass/base/typography.scss
+++ b/src/sass/base/typography.scss
@@ -205,7 +205,7 @@ $montserrat-extra-bold: "montserrat-extra-bold", Arial, sans-serif;
 $montserrat-black: "montserrat-black", Arial, sans-serif;
 
 body {
-  font-family: $base-font;
+  font-family: $open-sans;
   font-size: 14px;
   line-height: 20px;
 }
