--- a/src/sass/base/typography.scss
+++ b/src/sass/base/typography.scss
@@ -207,7 +207,8 @@ $montserrat-black: "montserrat-black", Arial, sans-serif;
 body {
   font-family: $open-sans;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 18px;
+  color: $base-text-color;
 }
 
 strong,
