--- a/src/sass/base/__variable.scss
+++ b/src/sass/base/__variable.scss
@@ -1,1 +1,14 @@
-$color: #242424;
+// цвета
+
+$base-text-color: #263238;
+
+
+$gray: #263238;
+$gray-dark: #7C8E96;
+$green: #4EBA6F;
+$red: #FF5722;
+$orange: #FF9800;
+$black: #263238;
+$white: #D6E3ED;
+$yellow-light: #FFECB3;
+$yellow: #F6C500;
