Добавил маленький контейнер главных страниц

--- a/src/sass/base/grid.scss
+++ b/src/sass/base/grid.scss
@@ -10,6 +10,11 @@
   padding-right: 15px;
   padding-left: 15px;
 }
+
+.container--small {
+  max-width: 720px;
+}
+
 @media (min-width: 768px) {
   .container {
     width: 750px;
