--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -26,6 +26,10 @@
 @import "components/header";
 @import "components/footer";
 @import "components/menu-footer";
+@import "components/page-header";
+@import "components/header";
+@import "components/menu";
+@import "components/logo";
 
 
 
