--- a/src/sass/components/logo.scss
+++ b/src/sass/components/logo.scss
@@ -8,4 +8,13 @@
   &--dark {
     color: $black;
   }
+
+  @media (max-width: $tablet) {
+
+    &__second {
+      line-height: 26px;
+      display: block;
+    }
+
+  }
 }
