Добавил некоторые классы в миксеры и сетку

--- a/src/sass/_mixins/mixins.scss
+++ b/src/sass/_mixins/mixins.scss
@@ -9,3 +9,20 @@
     clear: both;
   }
 }
+
+@mixin h1() {
+  font-family: $montserrat-bold;
+  font-size: 34px;
+  line-height: 1.2;
+}
+
+@mixin h2() {
+  font-family: $montserrat-bold;
+  font-size: 25px;
+  line-height: 1.2;
+}
+
+@mixin h3() {
+  font-family: $montserrat-bold;
+  font-size: 20px;
+}
