--- a/src/sass/base/grid.scss
+++ b/src/sass/base/grid.scss
@@ -16,6 +16,12 @@
   max-width: 960px;
 }
 
+@media (max-width: 768px) {
+  .mobile-hide {
+    display: none !important;
+  }
+}
+
 @media (min-width: 768px) {
   .container {
     width: 750px;
