Подгрузка новых компонентов

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -30,6 +30,11 @@
 @import "components/header";
 @import "components/menu";
 @import "components/logo";
+@import "components/user-courses";
+@import "components/notice-text";
+@import "components/progress";
+@import "components/status-text";
+@import "components/link-with-number";
 
 
 
