--- a/src/sass/components/link-with-number.scss
+++ b/src/sass/components/link-with-number.scss
@@ -6,6 +6,10 @@
   font-size: 16px;
   font-weight: 400;
 
+  &:hover {
+    opacity: .8;
+  }
+
   &__value {
     display: inline-block;
     min-width: 30px;
