--- a/src/sass/components/link-with-number.scss
+++ b/src/sass/components/link-with-number.scss
@@ -12,7 +12,7 @@
 
   &__value {
     display: inline-block;
-    min-width: 30px;
+    min-width: 20px;
     margin-left: 20px;
     padding: 5px;
     border-radius: 100px;
@@ -24,5 +24,9 @@
     font-size: 13px;
     font-weight: 400;
     line-height: 13px;
+
+    @media (max-width: 768px) {
+      margin-left: 5px;
+    }
   }
 }
