--- a/src/sass/components/user-courses.scss
+++ b/src/sass/components/user-courses.scss
@@ -65,7 +65,7 @@
   &__nav-item {
     display: inline-block;
     vertical-align: top;
-    margin-right: 10px;
+    margin-right: 30px;
 
     &:last-child {
       margin-right: 0;
@@ -74,6 +74,15 @@
     &--active {
       padding-bottom: 10px;
       border-bottom: 2px solid $black;
+    }
+
+    .link-with-number {
+      margin-right: 0;
+      font-size: 15px;
+    }
+
+    @media (max-width: 768px) {
+      margin-right: 10px;
     }
   }
 }
