алерт анонсов с адаптивом

--- a/src/sass/components/menu-footer.scss
+++ b/src/sass/components/menu-footer.scss
@@ -17,7 +17,7 @@
       margin-right: 0;
     }
 
-    @media (max-width: $phone-mw) {
+    @media (max-width: $tablet) {
       display: block;
       margin-right: 0;
       margin-bottom: 30px;
