Разметка и часть стилей списка курсов

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -35,6 +35,7 @@
 @import "components/progress";
 @import "components/status-text";
 @import "components/link-with-number";
+@import "components/courses-list";
 
 
 
