--- a/src/sass/base/grid.scss
+++ b/src/sass/base/grid.scss
@@ -22,6 +22,12 @@
   }
 }
 
+@media (max-width: 992px) {
+  .tablet-hide {
+    display: none !important;
+  }
+}
+
 @media (min-width: 768px) {
   .container {
     width: 750px;
@@ -824,4 +830,7 @@
 }
 .affix {
   position: fixed;
+}
+.text-right {
+  text-align: right;
 }
