блок описания курса с адаптивом (без js/jQuery)

--- a/src/sass/base/__variable.scss
+++ b/src/sass/base/__variable.scss
@@ -4,6 +4,7 @@ $base-text-color: #263238;
 
 $gray: #ECEFF1;
 $gray-dark: #7C8E96;
+$gray-darker: #455A64;
 $green: #4EBA6F;
 $red: #FF5722;
 $orange: #FF9800;
@@ -11,6 +12,7 @@ $black: #263238;
 $white: #D6E3ED;
 $yellow-light: #FFECB3;
 $yellow: #F6C500;
+$sand: #F4F4F4;
 
 
 // медиа
