--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -37,10 +37,10 @@
 @import "components/link-with-number";
 @import "components/courses-list";
 @import "components/announce-alert";
-
+@import "components/course-base";
+@import "components/course-brief";
 
 
 /*=== страницы ===*/
-
 @import "pages/layout";
 @import "pages/course";
