--- a/src/sass/components/announce-alert.scss
+++ b/src/sass/components/announce-alert.scss
@@ -22,10 +22,6 @@
       max-width: 100%;
       height: auto;
     }
-
-    @media (max-width: $tablet) {
-      display: none;
-    }
   }
 
 
@@ -66,7 +62,6 @@
   &__link {
     float: right;
     margin: 4px 0 0;
-    vertical-align: middle;
     border: 1px solid #78909C;
     border-radius: 3px;
     padding: 3px 12px;
@@ -74,6 +69,10 @@
     font-family: $open-sans;
     font-size: 13px;
     line-height: 16px;
+
+    &:hover {
+      background-color: darken(#ECEFF1, 5%);
+    }
     
     @media (max-width: $tablet) {
       margin-left: 0;
