--- a/src/sass/components/progress.scss
+++ b/src/sass/components/progress.scss
@@ -8,6 +8,10 @@ $big-width: 30px;
   border-radius: 5px;
   background-color: $gray-dark;
 
+  &--dark {
+    background-color: $gray-darker;
+  }
+
   &__bar {
     height: $big-width;
     background-color: $green;
