блок sections с адаптивностью (без js/jQuery)

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -39,6 +39,9 @@
 @import "components/announce-alert";
 @import "components/course-base";
 @import "components/course-brief";
+@import "components/course-info";
+@import "components/course-sections";
+@import "components/course-icon-link";
 
 
 /*=== страницы ===*/
