--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -42,6 +42,7 @@
 @import "components/course-info";
 @import "components/course-sections";
 @import "components/course-icon-link";
+@import "components/tooltip";
 
 
 /*=== страницы ===*/
