--- a/src/sass/components/profile-view.scss
+++ b/src/sass/components/profile-view.scss
@@ -1,4 +1,55 @@
 .profile-view {
   padding: 60px 0 50px;
   background-color: $gray;
+
+  &__image {
+    width: 120px;
+    float: left;
+
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+
+  &__description {
+    margin-left: 140px;
+  }
+
+  &__status {
+    font-family: $open-sans-bold;
+    font-weight: 700;
+    font-size: 16px;
+    text-transform: uppercase;
+  }
+
+  &__id {
+    font-family: $open-sans;
+    font-weight: 400;
+    display: inline-block;
+    vertical-align: top;
+    padding-left: 20px;
+  }
+
+  &__name {
+    @include h1();
+    margin: 15px 0;
+  }
+
+  &__title {
+    margin: 0;
+    font-family: $open-sans-bold;
+    font-weight: 700;
+    font-size: 16px;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+  }
+
+  &__table {
+    td:first-child {
+      width: 165px;
+      padding-bottom: 10px;
+
+    }
+  }
 }
