--- a/src/sass/base/buttons.scss
+++ b/src/sass/base/buttons.scss
@@ -5,6 +5,8 @@
   text-align: center;
   text-decoration: none;
   cursor: pointer;
+  font-family: $open-sans;
+  font-weight: 400;
 
   &:hover,
   &--hover {
@@ -16,16 +18,33 @@
 
   }
 
-  &--modify {
+  &--bordered {
+    text-transform: uppercase;
+    background: none;
+    border: 1px solid #B0BBBF;
+    border-radius: 5px;
+    color: #546E7A;
+    text-transform: uppercase;
+    font-size: 13px;
+    line-height: 16px;
+    padding: 3px 10px;
+
+    @media (max-width: $desktop) {
+      background-color: $gray-dark;
+      border: 1px solid $gray-dark;
+      color: #ffffff;
+    }
 
     &:hover,
     &--hover {
-
+      background-color: $gray-dark;
+      border: 1px solid $gray-dark;
+      color: #ffffff;
     }
 
     &:active,
     &--active {
-
+      opacity: .8;
     }
   }
 }
