--- a/src/sass/components/course-d.scss
+++ b/src/sass/components/course-d.scss
@@ -6,6 +6,10 @@
 
   &:first-of-type {
     border-top: 1px solid #C0C7CC;
+
+    @media (max-width: $tablet) {
+      border-top: 0;
+    }
   }
 
   &__col {
