СТраница и её компоненты

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -52,3 +52,5 @@
 @import "components/сourses-list";
 @import "components/course-d";
 @import "components/profile-view";
+@import "components/form";
+@import "components/page-box";
