--- a/src/sass/base/buttons.scss
+++ b/src/sass/base/buttons.scss
@@ -47,4 +47,33 @@
       opacity: .8;
     }
   }
+
+  &--submit {
+    text-transform: capitalize;
+    background: $black;
+    border-radius: 5px;
+    color: #ffffff;
+    font-size: 18px;
+    font-family: $montserrat;
+    font-weight: 400;
+    line-height: 20px;
+    padding: 13px 10px;
+    width: 100%;
+    box-sizing: border-box;
+    border: 0;
+
+    @media (max-width: $desktop) {
+
+    }
+
+    &:hover,
+    &--hover {
+      background: darken($black, 5%);
+    }
+
+    &:active,
+    &--active {
+      background: lighten($black, 10%);
+    }
+  }
 }
