--- a/src/sass/base/buttons.scss
+++ b/src/sass/base/buttons.scss
@@ -1,70 +1,60 @@
 .btn {
   display: inline-block;
-  vertical-align: top;
   box-sizing: border-box;
-  text-align: center;
-  text-decoration: none;
   cursor: pointer;
+  text-align: center;
+  vertical-align: top;
+  text-decoration: none;
   font-family: $open-sans;
   font-weight: 400;
 
-  &:hover,
-  &--hover {
 
-  }
 
-  &:active,
-  &--active {
 
-  }
 
   &--bordered {
-    text-transform: uppercase;
-    background: none;
-    border: 1px solid #B0BBBF;
+    padding: 3px 10px;
+    border: 1px solid #b0bbbf;
     border-radius: 5px;
-    color: #546E7A;
+    background: none;
+    color: #546e7a;
+    text-transform: uppercase;
     text-transform: uppercase;
     font-size: 13px;
     line-height: 16px;
-    padding: 3px 10px;
 
     @media (max-width: $desktop) {
-      background-color: $gray-dark;
       border: 1px solid $gray-dark;
+      background-color: $gray-dark;
       color: #ffffff;
     }
 
     &:hover,
     &--hover {
-      background-color: $gray-dark;
       border: 1px solid $gray-dark;
+      background-color: $gray-dark;
       color: #ffffff;
     }
 
     &:active,
     &--active {
-      opacity: .8;
+      opacity: 0.8;
     }
   }
 
   &--submit {
-    text-transform: capitalize;
-    background: $black;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 13px 10px;
+    border: 0;
     border-radius: 5px;
+    background: $black;
     color: #ffffff;
-    font-size: 18px;
+    text-transform: capitalize;
     font-family: $montserrat;
+    font-size: 18px;
     font-weight: 400;
     line-height: 20px;
-    padding: 13px 10px;
-    width: 100%;
-    box-sizing: border-box;
-    border: 0;
-
-    @media (max-width: $desktop) {
-
-    }
 
     &:hover,
     &--hover {
