--- a/src/sass/base/typography.scss
+++ b/src/sass/base/typography.scss
@@ -194,7 +194,6 @@ $open-sans-bold: "open-sans-bold", Arial, sans-serif;
 $open-sans-bold-italic: "open-sans-bold-italic", Arial, sans-serif;
 $open-sans-extra-bold: "open-sans-extra-bold", Arial, sans-serif;
 $open-sans-extra-bold-italic: "open-sans-extra-bold-italic", Arial, sans-serif;
-
 $montserrat-ultra-light: "montserrat-ultra-light", Arial, sans-serif;
 $montserrat-light: "montserrat-light", Arial, sans-serif;
 $montserrat-hair-line: "montserrat-hair-line", Arial, sans-serif;
@@ -205,25 +204,28 @@ $montserrat-extra-bold: "montserrat-extra-bold", Arial, sans-serif;
 $montserrat-black: "montserrat-black", Arial, sans-serif;
 
 body {
+  color: $base-text-color;
   font-family: $open-sans;
   font-size: 14px;
   line-height: 18px;
-  color: $base-text-color;
 }
 
-h1, .h1 {
+h1,
+.h1 {
   font-family: $montserrat-bold;
   font-size: 34px;
   line-height: 1.2;
 }
 
-h2, .h2 {
+h2,
+.h2 {
   font-family: $montserrat-bold;
   font-size: 25px;
   line-height: 1.2;
 }
 
-h3, .h3 {
+h3,
+.h3 {
   font-family: $montserrat-bold;
   font-size: 20px;
   line-height: 1.2;
