--- a/src/sass/components/form.scss
+++ b/src/sass/components/form.scss
@@ -1,21 +1,21 @@
 .form {
+  color: $black;
   font-family: $montserrat;
   font-weight: 400;
-  color: $black;
 
   &__title {
-    text-align: center;
     margin-bottom: 25px;
+    text-align: center;
     font-size: 18px;
   }
 
   &__error {
-    font-size: 14px;
-    text-align: center;
-    background-color: $yellow-light;
-    padding: 20px 0;
     margin: 0 -45px 25px;
+    padding: 20px 0;
     border-radius: 5px;
+    background-color: $yellow-light;
+    text-align: center;
+    font-size: 14px;
   }
 
   &__row {
@@ -28,54 +28,63 @@
   }
 
   input {
-    font-family: $montserrat;
-    font-weight: 400;
-    color: $black;
-    font-size: 15px;
-    width: 100%;
     box-sizing: border-box;
+    width: 100%;
     height: 45px;
     padding: 0 20px;
-    border-radius: 5px;
-    border: 1px solid $gray-dark;
     outline: none;
+    border: 1px solid $gray-dark;
+    border-radius: 5px;
+    color: $black;
+    font-family: $montserrat;
+    font-size: 15px;
+    font-weight: 400;
   }
 
   &__label {
-    font-size: 12px;
-    padding: 0 10px;
-    background-color: #ffffff;
     position: absolute;
     top: 0;
     left: 20px;
+    padding: 0 10px;
+    background-color: #ffffff;
     transform: translateY(-50%);
+    font-size: 12px;
+  }
+
+  &__link {
+    display: block;
+    color: $black;
+    text-align: center;
+    font-size: 13px;
+
+    &:hover {
+      text-decoration: none;
+    }
   }
 }
 
 .checkbox {
-
   input[type="checkbox"] {
     display: none;
   }
 
   input[type="checkbox"] + &__label {
-    padding-left: 25px;
     position: relative;
+    padding-left: 25px;
   }
 
   input[type="checkbox"] + &__label::before {
-    content: "";
-    width: 16px;
-    height: 16px;
     position: absolute;
     top: 0;
     left: 0;
-    border-radius: 5px;
+    width: 16px;
+    height: 16px;
     border: 1px solid $gray-dark;
+    border-radius: 5px;
+    content: "";
   }
 
   input[type="checkbox"]:checked + &__label::after {
-    content: "";
     position: absolute;
     top: 4px;
     left: 3px;
@@ -83,6 +92,6 @@
     height: 12px;
     background-image: url("../img/svg/checked-icon.svg");
     background-repeat: no-repeat;
+    content: "";
   }
-
 }
