обновлены заголовки в соответствии с uikit

--- a/src/sass/base/typography.scss
+++ b/src/sass/base/typography.scss
@@ -221,12 +221,20 @@ h2, .h2 {
   font-family: $montserrat-bold;
   font-size: 25px;
   line-height: 1.2;
+  color: #37474F;
 }
 
 h3, .h3 {
   font-family: $montserrat-bold;
   font-size: 20px;
   line-height: 1.2;
+}
+
+h4, .h4 {
+  font-family: $open-sans-bold;
+  font-size: 15px;
+  line-height: 1.2;
+  color: #4C4F5E;
 }
 
 p {
