добавлен блок forum

--- a/src/sass/components/course-info.scss
+++ b/src/sass/components/course-info.scss
@@ -1,4 +1,6 @@
 .course-info {
+	background: #ffffff;
+	padding: 25px 0;
 
 	&__nav {
 		list-style: none;
@@ -19,7 +21,10 @@
 		&--active {
 			border-bottom: 6px solid #37474F;
 
-			.course-info__nav-link { color: #37474F; }
+			.course-info__nav-link {
+				color: #37474F;
+				font-family: $open-sans-bold;
+			}
 
 		}
 
@@ -28,7 +33,7 @@
 	&__nav-link {
 		display: inline-block;
 		text-decoration: none;
-		font-family: $montserrat;
+		font-family: $open-sans;
 		font-size: 15px;
 		line-height: 18px;
 		color: #546E7A;
