--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -43,7 +43,7 @@
 @import "components/course-sections";
 @import "components/course-icon-link";
 @import "components/tooltip";
-
+@import "components/forum";
 
 /*=== страницы ===*/
 @import "pages/layout";
