--- a/src/sass/base/__variable.scss
+++ b/src/sass/base/__variable.scss
@@ -11,7 +11,7 @@ $orange: #FF9800;
 $black: #263238;
 $white: #D6E3ED;
 $yellow-light: #FFECB3;
-$yellow: #F6C500;
+$yellow: #FFCA28;
 $sand: #F4F4F4;
 
 
