--- a/src/sass/base/buttons.scss
+++ b/src/sass/base/buttons.scss
@@ -36,4 +36,71 @@
       background-color: darken($gray, 5%);
     }
   }
+
+
+
+  &--forum {
+    font-family: $open-sans;
+    font-size: 13px;
+    line-height: 15px;
+    border-radius: 4px;
+    vertical-align: baseline;
+  }
+
+
+  &--reply {
+    color: #ffffff;
+    padding: 2px 10px;
+    background: $gray-darker;
+    text-transform: lowercase;
+
+    &:hover,
+    &--hover {
+      background-color: darken($gray-darker, 5%);
+    }
+
+    &:active,
+    &--active {
+      background-color: darken($gray-darker, 5%);
+    }
+  }
+
+  &--publish {
+    color: #37474F;
+    padding: 2px 10px;
+    background: $yellow;
+    text-transform: lowercase;
+
+    &:hover,
+    &--hover {
+      background-color: darken($yellow, 5%);
+    }
+
+    &:active,
+    &--active {
+      background-color: darken($yellow, 5%);
+    }
+  }
+
+
+  &--submit {
+    color: #37474F;
+    padding: 4px 15px;
+    background: $yellow;
+    border: none;
+    outline: none;
+    margin-top: 10px;
+
+    &:hover,
+    &--hover {
+      background-color: darken($yellow, 5%);
+    }
+
+    &:active,
+    &--active {
+      background-color: darken($yellow, 5%);
+    }
+  }
+
+
 }
