--- a/src/sass/base/typography.scss
+++ b/src/sass/base/typography.scss
@@ -219,10 +219,10 @@ h1,
 
 h2,
 .h2 {
+  color: #37474f;
   font-family: $montserrat-bold;
   font-size: 25px;
   line-height: 1.2;
-  color: #37474F;
 }
 
 h3,
@@ -232,11 +232,12 @@ h3,
   line-height: 1.2;
 }
 
-h4, .h4 {
+h4,
+.h4 {
+  color: #4c4f5e;
   font-family: $open-sans-bold;
   font-size: 15px;
   line-height: 1.2;
-  color: #4C4F5E;
 }
 
 p {
