--- a/src/sass/components/course-d.scss
+++ b/src/sass/components/course-d.scss
@@ -1,11 +1,10 @@
 .course-preview {
+  padding: 15px 0;
+  border-bottom: 1px solid #c0c7cc;
   font-size: 0;
 
-  border-bottom: 1px solid #C0C7CC;
-  padding: 15px 0;
-
   &:first-of-type {
-    border-top: 1px solid #C0C7CC;
+    border-top: 1px solid #c0c7cc;
 
     @media (max-width: $tablet) {
       border-top: 0;
@@ -21,8 +20,8 @@
       width: 10%;
 
       @media (max-width: $tablet) {
-        width: 30%;
         float: left;
+        width: 30%;
       }
     }
 
@@ -87,8 +86,8 @@
   }
 
   &__image {
-    max-width: 70px;
     position: relative;
+    max-width: 70px;
 
     img {
       display: block;
@@ -98,65 +97,63 @@
     }
 
     &--success {
-
       &::after {
-        content: "";
         position: absolute;
         top: 0;
-        left: 0;
         right: 0;
         bottom: 0;
-        background-color: transparentize($green, 0.5);
+        left: 0;
         z-index: 10;
+        background-color: transparentize($green, 0.5);
+        content: "";
       }
 
       &::before {
-        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        z-index: 20;
         width: 30px;
         height: 30px;
-        background-color: $green;
         border: 2px solid $gray;
+        border-radius: 50%;
+        background-color: $green;
         background-image: url("../img/svg/checked-white-icon.svg");
         background-repeat: no-repeat;
         background-position: center;
         background-size: 12px 12px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        border-radius: 50%;
-        z-index: 20;
+        content: "";
         transform: translate(-50%, -50%);
       }
     }
 
     &--danger {
-
       &::after {
-        content: "";
         position: absolute;
         top: 0;
-        left: 0;
         right: 0;
         bottom: 0;
-        background-color: transparentize($red, 0.5);
+        left: 0;
         z-index: 10;
+        background-color: transparentize($red, 0.5);
+        content: "";
       }
 
       &::before {
-        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        z-index: 20;
         width: 30px;
         height: 30px;
-        background-color: $red;
         border: 2px solid $gray;
+        border-radius: 50%;
+        background-color: $red;
         background-image: url("../img/svg/point-icon.svg");
         background-repeat: no-repeat;
         background-position: center;
         background-size: 12px 12px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        border-radius: 50%;
-        z-index: 20;
+        content: "";
         transform: translate(-50%, -50%);
       }
     }
@@ -165,15 +162,15 @@
   &__title {
     margin: 0;
     font-family: $montserrat;
-    font-weight: 400;
     font-size: 16px;
+    font-weight: 400;
   }
 
   &__about {
     margin: 0;
+    color: #78909c;
     font-family: $open-sans-semi-bold;
     font-weight: 600;
-    color: #78909C;
 
     @media (max-width: $tablet) {
       span {
