--- a/src/sass/components/course-icon-link.scss
+++ b/src/sass/components/course-icon-link.scss
@@ -1,34 +1,36 @@
 .course-icon-link {
-	display: inline-block;
-	width: 27px;
-	height: 27px;
-	border: 1px solid #818181;
-	border-radius: 50%;
-	background: #ffffff;
-	line-height: 25px;
-	text-align: center;
-	box-sizing: border-box;
+  display: inline-block;
+  box-sizing: border-box;
+  width: 27px;
+  height: 27px;
+  border: 1px solid #818181;
+  border-radius: 50%;
+  background: #ffffff;
+  text-align: center;
+  line-height: 25px;
 
-	&--play svg {
-		width: 10px;
-		height: 10px;
-		padding-left: 3px;
-	}
+  &--play svg {
+    width: 10px;
+    height: 10px;
+    padding-left: 3px;
+  }
 
-	&--attach svg {
-		width: 12px;
-		height: 12px;
-	}
+  &--attach svg {
+    width: 12px;
+    height: 12px;
+  }
 
-	path { fill: #818181; }
+  path {
+    fill: #818181;
+  }
 
 
-	&:hover {
-		border: 1px solid $green;
-		background: $green;
+  &:hover {
+    border: 1px solid $green;
+    background: $green;
 
-		path { fill: #ffffff; }
-		
-	}
-	
+    path {
+      fill: #ffffff;
+    }
+  }
 }
