--- a/src/sass/components/course-info.scss
+++ b/src/sass/components/course-info.scss
@@ -1,43 +1,40 @@
 .course-info {
-	background: #ffffff;
-	padding: 25px 0;
+  padding: 25px 0;
+  background: #ffffff;
 
-	&__nav {
-		list-style: none;
-		font-size: 0;
+  &__nav {
     margin: 0;
     padding: 0;
+    list-style: none;
+    font-size: 0;
 
     @media (max-width: $desktop) {
-    	margin-top: 30px;
+      margin-top: 30px;
     }
-	}
+  }
 
-	&__nav-item {
-		display: inline-block;
-		margin-right: 20px;
-		padding-right: 10px;
+  &__nav-item {
+    display: inline-block;
+    margin-right: 20px;
+    padding-right: 10px;
 
-		&--active {
-			border-bottom: 6px solid #37474F;
+    &--active {
+      border-bottom: 6px solid #37474f;
 
-			.course-info__nav-link {
-				color: #37474F;
-				font-family: $open-sans-bold;
-			}
+      .course-info__nav-link {
+        color: #37474f;
+        font-family: $open-sans-bold;
+      }
+    }
+  }
 
-		}
-
-	}
-
-	&__nav-link {
-		display: inline-block;
-		text-decoration: none;
-		font-family: $open-sans;
-		font-size: 15px;
-		line-height: 18px;
-		color: #546E7A;
-		padding-bottom: 15px;
-	}
-	
+  &__nav-link {
+    display: inline-block;
+    padding-bottom: 15px;
+    color: #546e7a;
+    text-decoration: none;
+    font-family: $open-sans;
+    font-size: 15px;
+    line-height: 18px;
+  }
 }
