--- a/src/sass/components/tooltip.scss
+++ b/src/sass/components/tooltip.scss
@@ -1,36 +1,35 @@
 [data-tooltip] {
-	position: relative;
+  position: relative;
 
-	&:before {
-		display: none;
-		position: absolute;
-		content: attr(data-tooltip);
-		right: -10px;
-		bottom: -40px;
-	  background: #37474F;
-	  color: #CFD8DC;
-	  font-family: $open-sans;
-	  font-size: 14px;
-	  line-height: 17px;
-	  white-space: nowrap;
-	  border-radius: 4px;
-	  padding: 6px 20px;
-	  z-index: 999;
-	}
+  &:before {
+    position: absolute;
+    right: -10px;
+    bottom: -40px;
+    z-index: 999;
+    display: none;
+    padding: 6px 20px;
+    border-radius: 4px;
+    background: #37474f;
+    color: #cfd8dc;
+    content: attr(data-tooltip);
+    white-space: nowrap;
+    font-family: $open-sans;
+    font-size: 14px;
+    line-height: 17px;
+  }
 
-	&:after {
-		display: none;
-		position: absolute;
-		content: '';
-		right: 5px;
-		bottom: -15px;
-		border: 8px solid transparent;
-		border-bottom: 12px solid #37474F;
-	}
+  &:after {
+    position: absolute;
+    right: 5px;
+    bottom: -15px;
+    display: none;
+    border: 8px solid transparent;
+    border-bottom: 12px solid #37474f;
+    content: "";
+  }
 
-	&:hover:before,
-	&:hover:after {
-		display: block;
-	}
-	
+  &:hover:before,
+  &:hover:after {
+    display: block;
+  }
 }
