--- a/src/sass/components/user-courses.scss
+++ b/src/sass/components/user-courses.scss
@@ -2,9 +2,7 @@
   margin-top: 50px;
 
   @media (max-width: $desktop) {
-
     margin-top: 30px;
-
   }
 
   &__title {
@@ -19,12 +17,11 @@
     margin-top: 10px;
 
     @media (min-width: $desktop) {
-      margin-top: 0px;
+      margin-top: 0;
       border: none;
       background: transparent;
       color: $base-text-color;
     }
-
   }
 
   .progress {
@@ -36,17 +33,17 @@
   }
 
   &__nav {
+    margin: 0;
     margin-top: 75px;
+    padding: 0;
     list-style: none;
     font-size: 0;
-    margin: 0;
-    padding: 0;
   }
 
   &__nav-item {
     display: inline-block;
-    vertical-align: top;
     margin-right: 30px;
+    vertical-align: top;
 
     &:last-child {
       margin-right: 0;
