--- a/src/sass/components/course-base.scss
+++ b/src/sass/components/course-base.scss
@@ -25,7 +25,7 @@
     @media (max-width: $tablet) {
       display: none;
 
-      &--active {
+      &--open {
         display: block;
       }
     }
