Убрал растягивание формы

--- a/src/sass/components/forum.scss
+++ b/src/sass/components/forum.scss
@@ -117,6 +117,7 @@
     textarea {
       width: 100%;
       border: 1px solid #d4d4d4;
+      resize: vertical;
 
       &:focus {
         border: 1px solid #d4d4d4;
