добавлен компонент section-progress

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -44,10 +44,12 @@
 @import "components/course-icon-link";
 @import "components/tooltip";
 @import "components/forum";
+@import "components/section-progress";
 
 /*=== страницы ===*/
 @import "pages/layout";
 @import "pages/course";
+@import "pages/course-section";
 
 @import "components/сourses-list";
 @import "components/course-d";
