поправлен фон на страницах форм, заменен паттерн фона

--- a/src/sass/pages/layout.scss
+++ b/src/sass/pages/layout.scss
@@ -1,5 +1,4 @@
 .pattern-page {
-  background-color: #D8E3EE;
-  background-image: url("../img/svg/bg-pattern.svg");
-  background-repeat: repeat;
+  background: url("../img/bg-pattern.png") 0 0 repeat;
+  background-size: 501px 280px;
 }
