--- a/src/sass/components/forum.scss
+++ b/src/sass/components/forum.scss
@@ -101,10 +101,26 @@
   }
 
   &__comment-date {
+    display: inline;
+    margin: 0;
+    padding: 0;
     margin-right: 15px;
     color: #acacac;
     font-size: 13px;
     line-height: 1.1;
+  }
+
+  &__draft-icon {
+    display: inline-block;
+    vertical-align: bottom;
+    padding-right: 7px;
+
+    svg {
+      width: 15px;
+      height: 12px;
+    }
+    
+    path { fill: #757575; }
   }
 
   &__comment-text,
