--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -45,6 +45,8 @@
 @import "components/tooltip";
 @import "components/forum";
 @import "components/section-progress";
+@import "components/materials";
+
 
 /*=== страницы ===*/
 @import "pages/layout";
