шапка на странице course section вынесена в компонент - section-head

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -44,8 +44,11 @@
 @import "components/course-icon-link";
 @import "components/tooltip";
 @import "components/forum";
+@import "components/section-head";
 @import "components/section-progress";
+@import "components/section-content";
 @import "components/materials";
+
 
 
 /*=== страницы ===*/
