--- a/src/sass/pages/course-section.scss
+++ b/src/sass/pages/course-section.scss
@@ -1,44 +1,41 @@
 .course-section {
 
-	&__head {
-		padding: 20px 0 0;
-		background: #EAEEF1;
+	&__body {
+		padding: 30px 0;
 	}
 
-	&__head-title {
-		margin: 0 0 20px;
-		padding: 0;
-		font-family: $montserrat;
-		font-size: 15px;
-		line-height: 1.2;
-		color: #37474F;
-	}
-	
-	&__head-links {
-		@include clearfix();
+	&__title {
+		color: #37474f;
+	  font-family: $montserrat;
+	  font-size: 25px;
+	  line-height: 1.3;
+	  margin-bottom: 30px;
 	}
 
-	&__head-back {
-		float: left;
-		margin-right: 20px;
+	&__title-icon {
+		display: inline-block;
+		vertical-align: top;
+		height: 25px;
+		width: 25px;
+		background: #CFD8DC;
+		border-radius: 50%;
+		line-height: 20px;
+		text-align: center;
+		margin: 3px 10px 0 0;
+
+		svg {
+			width: 10px;
+			height: 10px;
+		}
+
+		path {
+			fill: #78909C;
+		}
 	}
 
-	&__head-progress {
-		float: left;
-
-		@media (max-width: $tablet) { padding-bottom: 10px; }
-		@media (max-width: $desktop) { margin-top: 20px; clear: both; }
-		
-	}
-
-	&__head-btns {
-		float: right;
-
-		@media (max-width: $desktop) { float: left; }
-	}
-
-	&__head-arrow {
-		margin-right: 8px;
+	&__title-text {
+		display: inline-block;
+		width: 90%;
 	}
 
 
