добавлен модификатор для компонента

--- a/src/sass/components/course-brief.scss
+++ b/src/sass/components/course-brief.scss
@@ -42,6 +42,19 @@
       background: #ffffff;
     }
 
+    &--gray{
+      background: $gray;
+
+      &:before {
+        background: url(../img/svg/contour-gray.svg) 0 0 no-repeat;
+        background-size: 100% 185px;
+      }
+
+      &:after {
+        background: $gray;
+      }
+    }
+
 
   }
 
