--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -44,7 +44,7 @@
 @import "components/course-icon-link";
 @import "components/tooltip";
 @import "components/forum";
-@import "components/section-head";
+@import "components/section-nav";
 @import "components/section-progress";
 @import "components/section-content";
 @import "components/materials";
