--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -54,3 +54,5 @@
 @import "components/profile-view";
 @import "components/form";
 @import "components/page-box";
+@import "components/page-top";
+@import "components/alert";
