добавлена страница теста

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -48,8 +48,11 @@
 @import "components/section-progress";
 @import "components/section-content";
 @import "components/materials";
-
-
+@import "components/test-nav";
+@import "components/test-progress";
+@import "components/test-quest";
+@import "components/test-content";
+@import "components/test-answers";
 
 /*=== страницы ===*/
 @import "pages/layout";
