--- a/src/sass/components/section-nav.scss
+++ b/src/sass/components/section-nav.scss
@@ -14,6 +14,35 @@
 		@media (min-width: $tablet) { display: none; }
 	}
 
+
+
+	&--test {
+		@include clearfix();
+		background: $gray;
+		padding: 15px 40px 20px;
+		border-radius: 0 0 6px 6px;
+
+		@media (max-width: $tablet) { padding: 15px 0; }
+
+		@media (max-width: $desktop) {
+			max-width: 540px;
+			margin: 0 auto;
+			background: transparent;
+		}
+
+		.section-nav__btns {
+			float: left;
+
+			@media (max-width: $tablet) {
+				float: none;
+				display: block;
+				text-align: center;
+			}
+		}
+	}
+
+
+
 	&__title {
 		margin: 0 0 20px;
 		padding: 0;
@@ -48,5 +77,18 @@
 
 	&__arrow {
 		margin-right: 8px;
+	}
+
+	&__text {
+		float: right;
+		margin: 0;
+		padding: 0;
+		font-size: 13px;
+		text-align: center;
+
+		@media (max-width: $tablet) {
+			float: none;
+			margin: 10px 0 0;
+		}
 	}
 }
