--- a/src/sass/pages/course-section.scss
+++ b/src/sass/pages/course-section.scss
@@ -7,13 +7,13 @@
 	}
 
 	&__title {
-		color: #37474f;
-	  font-family: $montserrat;
-	  font-size: 25px;
 	  line-height: 1.3;
-	  margin-bottom: 30px;
+	  margin: 0 0 30px;
+	  padding: 0;
 
 	  @media (max-width: $tablet) { margin-bottom: 15px; }
+		@media (min-width: $desktop) { font-family: $montserrat; }
+
 	}
 
 	&__title-icon {
