Заготовка страницы сообщений + фильтры без адаптива

--- a/src/sass/components/form.scss
+++ b/src/sass/components/form.scss
@@ -94,4 +94,10 @@
     background-repeat: no-repeat;
     content: "";
   }
+
+  &--white-bg {
+    input[type="checkbox"] + .checkbox__label::before {
+      background-color: #ffffff;
+    }
+  }
 }
