--- a/src/sass/components/filter.scss
+++ b/src/sass/components/filter.scss
@@ -7,6 +7,10 @@
     margin-bottom: 30px;
   }
 
+  @media (max-width: $tablet) {
+    padding: 10px;
+  }
+
   &__collapse {
     background: none;
     border: 0;
@@ -22,6 +26,11 @@
 
     @media (max-width: $desktop) {
       display: block;
+    }
+
+    @media (max-width: $tablet) {
+      top: 10px;
+      right: 10px;
     }
   }
 
@@ -62,6 +71,19 @@
         width: 55%;
       }
     }
+
+    @media (max-width: $tablet) {
+      margin-bottom: 10px;
+
+      &:nth-child(1) {
+        width: 49%;
+      }
+
+      &:nth-child(2) {
+        width: 50%;
+        float: right;
+      }
+    }
   }
 
   &__group-title {
@@ -78,6 +100,15 @@
       display: inline-block;
       vertical-align: top;
       margin-right: 10px;
+    }
+
+    @media (max-width: $tablet) {
+      display: block;
+      margin-bottom: 10px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 
