--- a/src/sass/components/alert.scss
+++ b/src/sass/components/alert.scss
@@ -1,21 +1,21 @@
 .alert {
   padding: 30px;
+  border: 1px solid #cfd8dc;
   background-color: $gray;
-  border: 1px solid #CFD8DC;
 
   &__title {
     margin: 0;
     margin-bottom: 20px;
     font-family: $montserrat;
-    font-weight: 400;
     font-size: 18px;
+    font-weight: 400;
   }
 
   &__text {
     margin: 0;
+    margin-bottom: 20px;
     font-size: 14px;
     line-height: 20px;
-    margin-bottom: 20px;
 
     &:last-child {
       margin-bottom: 0;
