--- a/src/sass/components/collapse.scss
+++ b/src/sass/components/collapse.scss
@@ -1,7 +1,7 @@
 .collapse {
-  padding: 20px 15px;
-  border: 1px solid #CFD8DC;
   margin-bottom: 20px;
+  padding: 20px 15px;
+  border: 1px solid #cfd8dc;
 
   &:last-child {
     margin-bottom: 0;
@@ -24,25 +24,25 @@
 
   &__btn {
     float: right;
-    color: #78909C;
-    font-size: 13px;
-    line-height: 13px;
     padding: 5px 10px;
+    border: 0;
     border-radius: 5px;
     background: transparent;
-    border: 0;
+    color: #78909c;
+    font-size: 13px;
+    line-height: 13px;
 
     svg {
       display: inline-block;
-      vertical-align: baseline;
       margin-left: 5px;
+      vertical-align: baseline;
     }
   }
 
   &__content {
     display: none;
 
-    p{
+    p {
       min-width: 460px;
 
       &:last-child {
