--- a/src/sass/components/messages.scss
+++ b/src/sass/components/messages.scss
@@ -8,6 +8,10 @@
       display: inline-block;
       margin-left: 50px;
     }
+
+    @media (max-width: $tablet) {
+      display: none;
+    }
   }
 
   &__row {
@@ -26,15 +30,27 @@
 
     &--1 {
       width: 23%;
+
+      @media (max-width: $tablet) {
+        width: 50%;
+      }
     }
 
     &--2 {
       width: 10%;
       text-align: center;
+
+      @media (max-width: $tablet) {
+        width: 50%;
+      }
     }
 
     &--3 {
       width: 67%;
+
+      @media (max-width: $tablet) {
+        width: 100%;
+      }
     }
   }
 
@@ -68,6 +84,11 @@
     margin-top: 3px;
     cursor: pointer;
 
+    @media (max-width: $tablet) {
+      margin-top: 10px;
+      width: 100%;
+    }
+
     &:hover {
       text-decoration: underline;
     }
@@ -84,6 +105,10 @@
     position: absolute;
     top: 10px;
     right: 10px;
+
+    @media (max-width: $tablet) {
+      position: static;
+    }
   }
 
   &__content {
